add mock for Investor's gains. for NET-825.

--- a/src/http/api/investors/swag/Investor.yaml
+++ b/src/http/api/investors/swag/Investor.yaml
@@ -39,6 +39,17 @@ properties:
   is_featured:
     type: boolean
     description: Is featured Investor
+  gain:
+    type: object
+    title: InvestorGain
+    description: Investor's gains from year start and today
+    properties:
+      ytd:
+        type: number
+        description: YTD gain
+      today:
+        type: number
+        description: intraday gain
 required:
 - id
 - first_name
