--- a/cfg/config.json
+++ b/cfg/config.json
@@ -44,5 +44,11 @@
   "subscr":
   {
     "token": "BbfiKZ9U0aQAwnfj6sxO6tQ5v7W9vCEZ"
+  },
+
+  "stripe":
+  {
+    "secret_key": "sk_test_dwYOVs8ksV5k42u2zcJWQiw4",
+    "pub_key": "pk_test_PYBikGVhRueRB0vBKD9JZjvf"
   }
 }
