--- a/src/http/api/subscr/swag/Activate.yaml
+++ b/src/http/api/subscr/swag/Activate.yaml
@@ -9,21 +9,17 @@ post:
       type: object
       title: Subscription Payload
       properties:
-        type:
+        plan:
           type: string
-          description: Subscription type
-        user_id:
-          type: integer
-          description: User Id
-        days:
-          type: integer
-          description: Number of subscription days (if null is used default)
+          description: Subscription plan
         token:
           type: string
-          description: Authorization token for activation
+          description: Stripe token for customer subscription
+        coupon:
+          type: string
+          description: Promotion code for subscription
       required:
-      - type
-      - user_id
+      - plan
       - token
   responses:
     200:
