(NET-1057) Add optional chart field to POST /feed/post

--- a/src/http/api/feed/swag/FeedPost.yaml
+++ b/src/http/api/feed/swag/FeedPost.yaml
@@ -112,12 +112,14 @@ post:
             title:
               type: string
               description: Update title
-            text: 
+            text:
               type: string
               description: Update description
             pic:
               type: string
               description: Update post picture hash
+            chart:
+              $ref: ./PostChartPayload.yaml
           required:
           - symbols
           - title
