(NET-1057) Add refs to pic and chart into Feed Response Model

--- a/src/http/api/feed/swag/UpdateEvent.yaml
+++ b/src/http/api/feed/swag/UpdateEvent.yaml
@@ -15,3 +15,8 @@ allOf:
           type: string
         text:
           type: string
+        pic:
+          type: string
+          description: Uploaded Image hash
+        chart:
+          $ref: ./PostChartPayload.yaml
