--- a/src/http/api/investors/swag/InvestorChartItem.yaml
+++ b/src/http/api/investors/swag/InvestorChartItem.yaml
@@ -11,6 +11,10 @@ properties:
     type: array
     items:
     - $ref: ../../symbols/swag/ChartPoint.yaml
+  utcOffset:
+    type: number
+    format: integer
+    description: UTC Offset to Exchange local time. Hours
 required:
 - period
 - points
