--- a/src/http/api/symbols/swag/SymbolChartItem.yaml
+++ b/src/http/api/symbols/swag/SymbolChartItem.yaml
@@ -15,6 +15,10 @@ properties:
     type: array
     items:
     - $ref: ./ChartPoint.yaml
+  utcOffset:
+    type: number
+    format: integer
+    description: UTC Offset to Exchange local time. Hours
 required:
 - period
 - points
