Add post_id param to post/update/ post-as/update

--- a/src/http/api/feed/swag/FeedPostUpdate.yaml
+++ b/src/http/api/feed/swag/FeedPostUpdate.yaml
@@ -20,6 +20,9 @@ post:
           type: object
           description: Post properties
           properties:
+            post_id:
+              type: integer
+              description: Post id to delete
             text:
               type: string
             risk:
