--- a/src/http/api/feed/swag/FeedPostUpdateAs.yaml
+++ b/src/http/api/feed/swag/FeedPostUpdateAs.yaml
@@ -22,6 +22,9 @@ post:
           type: object
           description: Post properties
           properties:
+            post_id:
+              type: integer
+              description: Post id to delete
             text:
               type: string
             risk:
