Add reset feed_item with soft mode

--- a/src/http/api/feed/swag/FeedPostDelete.yaml
+++ b/src/http/api/feed/swag/FeedPostDelete.yaml
@@ -12,6 +12,9 @@ delete:
         post_id:
           type: integer
           description: Post id to delete
+        soft_mode:
+          type: boolean
+          description: If need to remove trade post without trade revert
       required:
       - post_id
   responses:
