--- a/src/http/api/feed/swag/FeedPostUpdateAs.yaml
+++ b/src/http/api/feed/swag/FeedPostUpdateAs.yaml
@@ -32,7 +32,7 @@ post:
               enum:
               - low
               - medium
-              - hign
+              - high
             motivations:
               type: array
               items:
