--- a/src/http/api/feed/swag/TradeEvent.yaml
+++ b/src/http/api/feed/swag/TradeEvent.yaml
@@ -29,7 +29,7 @@ allOf:
           enum:
           - low
           - medium
-          - hign
+          - high
         motivations:
           type: array
           items:
