--- a/src/http/api/feed/swag/FeedPost.yaml
+++ b/src/http/api/feed/swag/FeedPost.yaml
@@ -46,7 +46,7 @@ post:
               enum:
               - low
               - medium
-              - hign
+              - high
             motivations:
               type: array
               items:
