--- a/src/http/api/feed/swag/FeedPostAs.yaml
+++ b/src/http/api/feed/swag/FeedPostAs.yaml
@@ -48,7 +48,7 @@ post:
               enum:
               - low
               - medium
-              - hign
+              - high
             motivations:
               type: array
               items:
