--- a/src/http/api/investors/swag/GetPostInvestors.yaml
+++ b/src/http/api/investors/swag/GetPostInvestors.yaml
@@ -24,6 +24,10 @@ get:
     in: query
     type: string
     description: Symbols to filter investors `TICKER.EXCHANGE`
+  - name: is_public
+    in: query
+    type: string
+    description: Filter investors by flag `is_public`
   responses:
     200:
       description: Investors list
