Add chart to swagger update model

--- a/src/http/api/feed/swag/FeedPostUpdate.yaml
+++ b/src/http/api/feed/swag/FeedPostUpdate.yaml
@@ -75,6 +75,8 @@ post:
             pic:
               type: string
               description: Update post picture hash
+            chart:
+              $ref: ./PostChartPayload.yaml
       required:
       - data
   responses:
