--- a/src/http/api/statics/swag/UploadProfilePic.yaml
+++ b/src/http/api/statics/swag/UploadProfilePic.yaml
@@ -1,7 +1,7 @@
 post:
   description: Upload investor profile picture
   consumes:
-  - multipart/form-data
+  - application/x-www-form-urlencoded
   parameters:
   - name: profile_pic
     description: |
@@ -12,8 +12,7 @@ post:
     format: binary
   - name: target_user_id
     description: |
-      ID of target investor to set profile_pic,
-      if user is admin, target_user_id is required
+      ID of target investor to set profile_pic
     in: formData
     type: number
   responses:
