set can_delete_trade.

--- a/src/http/api/feed/swag/TradeEvent.yaml
+++ b/src/http/api/feed/swag/TradeEvent.yaml
@@ -34,3 +34,6 @@ allOf:
           type: array
           items:
             type: string
+        can_delete_trade:
+          type: boolean
+          description: Can corresponding trade operation be deleted
