--- a/src/http/api/feed/swag/FeedPost.yaml
+++ b/src/http/api/feed/swag/FeedPost.yaml
@@ -11,6 +11,7 @@ post:
     required: true
     schema:
       type: object
+      title: Post model
       properties:
         type:
           type: string
@@ -19,9 +20,12 @@ post:
           type: string
           format: date-time
           description: Post date
-        trade_data:
+        data:
           type: object
-          description: Post properties
+          description: '= **oneOf**(TradeData, WatchlistData, UpdateData)'
+        TradeData:
+          type: object
+          title: data = TradeData
           properties:
             dir:
               description: Type of trade operation
@@ -65,9 +69,9 @@ post:
           - text
           - risk
           - motivations
-        watchlist_data:
+        WatchlistData:
           type: object
-          description: Post properties
+          title: data = WatchlistData
           properties:
             dir:
               description: Type of watchlist operation
@@ -100,9 +104,9 @@ post:
           - target_price
           - text
           - motivations
-        update_data:
+        UpdateData:
           type: object
-          description: Post properties
+          title: data = UpdateData
           properties:
             symbols:
               type: array
