--- a/src/http/api/feed/swag/ChartSeries.yaml
+++ b/src/http/api/feed/swag/ChartSeries.yaml
@@ -1,5 +1,5 @@
 type: object
-title: Chart Series Model
+title: Chart Series
 description: As Is from GET /symbols/{symbol}/chart
 properties:
   period:
@@ -7,7 +7,19 @@ properties:
   points:
     type: array
     items:
-    - type: object
+      type: object
+      title: Chart point
+      properties:
+        timestamp:
+          type: string
+          format: date-time
+          description: point timestamp
+        value:
+          type: number
+          description: point value
+      required:
+      - timestamp
+      - value
 required:
 - period
 - points
