--- a/package.json
+++ b/package.json
@@ -117,7 +117,10 @@
       "^3.4.1",
 
     "swagger-tools":
-      "0.9"
+      "0.9",
+
+    "sanitize-html":
+      "1.13.0"
   },
 
   "devDependencies":
