--- a/src/http/api/feed/swag/FeedPostAs.yaml
+++ b/src/http/api/feed/swag/FeedPostAs.yaml
@@ -43,6 +43,8 @@ post:
               minimum: 0
             text:
               type: string
+            brief:
+              type: string
             risk:
               type: string
               enum:
@@ -65,6 +67,7 @@ post:
           - price
           - amount
           - text
+          - brief
           - risk
           - motivations
         watchlist_data:
@@ -86,6 +89,8 @@ post:
               minimum: 0
             text:
               type: string
+            brief:
+              type: string
             motivations:
               type: array
               items:
@@ -101,6 +106,7 @@ post:
           - symbol
           - target_price
           - text
+          - brief
           - motivations
         update_data:
           type: object
@@ -117,6 +123,8 @@ post:
             text: 
               type: string
               description: Update description
+            brief:
+              type: string
             pic:
               type: string
               description: Update post picture hash
@@ -124,6 +132,7 @@ post:
           - symbols
           - title
           - text
+          - brief
       required:
       - type
       - data
