--- a/src/http/api/feed/swag/FeedPost.yaml
+++ b/src/http/api/feed/swag/FeedPost.yaml
@@ -41,6 +41,8 @@ post:
               minimum: 0
             text:
               type: string
+            brief:
+              type: string
             risk:
               type: string
               enum:
@@ -63,6 +65,7 @@ post:
           - price
           - amount
           - text
+          - brief
           - risk
           - motivations
         watchlist_data:
@@ -84,6 +87,8 @@ post:
               minimum: 0
             text:
               type: string
+            brief:
+              type: string
             motivations:
               type: array
               items:
@@ -99,6 +104,7 @@ post:
           - symbol
           - target_price
           - text
+          - brief
           - motivations
         update_data:
           type: object
@@ -114,7 +120,8 @@ post:
               description: Update title
             text:
               type: string
-              description: Update description
+            brief:
+              type: string
             pic:
               type: string
               description: Update post picture hash
@@ -124,6 +131,7 @@ post:
           - symbols
           - title
           - text
+          - brief
       required:
       - type
       - data
