--- a/package.json
+++ b/package.json
@@ -117,7 +117,10 @@
       "^3.4.1",
 
     "swagger-tools":
-      "0.9"
+      "0.9",
+
+    "csv-parse":
+      "^1.1"
   },
 
   "devDependencies":
