--- a/src/http/api/investors/swag/Investor.yaml
+++ b/src/http/api/investors/swag/Investor.yaml
@@ -52,6 +52,12 @@ properties:
       today:
         type: number
         description: intraday gain
+  available_from:
+    type: string
+    format: datetime
+    description: |
+      Date and time after which you can add new holdings, make trades,
+      make operations with cash_management
 required:
 - id
 - first_name
