--- a/infrastructure/playbook.yml
+++ b/infrastructure/playbook.yml
@@ -25,6 +25,10 @@
       update_cache: true
       name: nodejs=4.*
 
+  - name: install Nginx
+    apt:
+      name: nginx=1.4.*
+
   - name: add PostgreSQL repository
     apt_repository:
       repo: deb https://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main
