[NET-1374] Update swagger

--- a/src/http/api/investors/swag/GetPostInvestors.yaml
+++ b/src/http/api/investors/swag/GetPostInvestors.yaml
@@ -30,6 +30,10 @@ get:
     description: |
       Filter investors by flag `is_public`.
       Available for admin user only
+  - name: query
+    in: query
+    type: string
+    description: Search query
   responses:
     200:
       description: Investors list
