--- a/src/http/api/feed/swag/FeedPostAs.yaml
+++ b/src/http/api/feed/swag/FeedPostAs.yaml
@@ -120,6 +120,8 @@ post:
             pic:
               type: string
               description: Update post picture hash
+            chart:
+              $ref: ./PostChartPayload.yaml
           required:
           - symbols
           - title
