nginx: improve trailing slash behavior.

--- a/cfg/env/_nginx.conf
+++ b/cfg/env/_nginx.conf
@@ -10,8 +10,8 @@ server
 		proxy_pass http://localhost:{{ port }};
 	}
 
-	location /admin/
+	location ~ ^/admin(?:/(.*))?$
 	{
-		alias /home/ubuntu/ng-admin/{{ env }}/dist/;
+		alias /home/ubuntu/ng-admin/{{ env }}/dist/$1;
 	}
 }
