default avatar and profile_pic

--- a/src/http/api/statics/swag/UploadUserPic.yaml
+++ b/src/http/api/statics/swag/UploadUserPic.yaml
@@ -10,6 +10,11 @@ post:
     required: true
     type: file
     format: binary
+  - name: target_user_id
+    description: |
+      ID of target investor to set profile_pic
+    in: formData
+    type: number
   responses:
     200:
       description: user's avatar updated
