--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 
   "scripts":
   {
-    "start": "pm2 start . --name \"$(cat ENV)\"",
+    "start": "pm2 start . --name \"$(cat ENV)\" -i max",
     "stop":  "pm2 stop  .",
 
     "start-node": "node .",
