--- a/cfg/config.json
+++ b/cfg/config.json
@@ -53,6 +53,11 @@
     "key": "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"
   },
 
+  "mandrill":
+  {
+    "key": "IRsds6YbxE_bx1YHxpr1uw"
+  },
+
   "stripe":
   {
     "secret_key": "sk_test_dwYOVs8ksV5k42u2zcJWQiw4",
