Move default to config. Fill test and staging config

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -55,7 +55,22 @@
 
   "mandrill":
   {
-    "key": "IRsds6YbxE_bx1YHxpr1uw"
+    "key": "IRsds6YbxE_bx1YHxpr1uw",
+    "defaults":
+    {
+      "confirm_link": "netvest.com",
+      "password_link": "netvest.com",
+      "website_link": "netvest.com",
+      "feedback_link": "netvest.com",
+      "contact_email": "contact@netvest.com",
+      "ios_beta_app": "https://rink.hockeyapp.net/apps/dcb637f7a19541a4a00ec7dfbbfc7cca/app_versions/232",
+      "android_beta_app": "https://rink.hockeyapp.net/apps/95edc0834f3e484baad85ddd3148d777/app_versions/193",
+      "itunes_link": "http://www.apple.com/lae/itunes/",
+      "play_market_link": "https://play.google.com/store/apps",
+      "investor_panel_link": "api.netvest.com/admin/",
+      "terms_of_use_link": "netvest.com",
+      "privacy_policy_link": "netvest.com"
+    }
   },
 
   "email_substs":
