--- a/src/http/api/users/swag/UsersList.yaml
+++ b/src/http/api/users/swag/UsersList.yaml
@@ -17,9 +17,7 @@ get:
     in: query
     type: string
     description: |
-      Subscription types (described in stripe) separated with a comma
-      Use 'none' word for user without subscription
-      E.g ?subscription=none,trial,premium
+      Subscription types [standard || trial || premium]
 
   responses:
     200:
