Add filter by type, move logic from portfolio to tradeops

--- a/src/http/api/investors/swag/InvestorCashOps.yaml
+++ b/src/http/api/investors/swag/InvestorCashOps.yaml
@@ -11,6 +11,10 @@ get:
     in: query
     type: integer
     description: Page number
+  - name: type
+    in: query
+    type: string
+    description: Filter by type [withdraw || fee || interest || deposit]
   responses:
     200:
       description: Investor
