--- a/src/http/api/notifications/swag/GetPostNotifications.yaml
+++ b/src/http/api/notifications/swag/GetPostNotifications.yaml
@@ -1,18 +1,10 @@
 get:
   description: Get user notifications
   parameters:
-  - name: max_id
+  - name: page
     in: query
     type: integer
-    description: |
-      Get notifications that are added before *max_id* (inclusive)
-      [twitter guide](https://dev.twitter.com/rest/public/timelines)
-  - name: since_id
-    in: query
-    type: integer
-    description: |
-      Get notifications greater than *since_id* (non inclusive)
-      [twitter guide](https://dev.twitter.com/rest/public/timelines)
+    description: Page number
   responses:
     200:
       description: User notifications
