--- a/package.json
+++ b/package.json
@@ -58,6 +58,15 @@
     "lwip":
       "^0.0.9",
 
+    "imagemin":
+      "^5.2.2",
+
+    "imagemin-jpegoptim":
+      "^5.0.0",
+
+    "imagemin-optipng":
+      "^5.2.1",
+
     "mkdirp":
       "^0.5.1",
 
