--- a/cfg/config.json
+++ b/cfg/config.json
@@ -53,6 +53,7 @@
     "key": "IRsds6YbxE_bx1YHxpr1uw",
     "defaults":
     {
+      "host": "www.netvest.com",
       "confirm_link": "netvest.com",
       "password_link": "netvest.com",
       "website_link": "netvest.com",
@@ -60,8 +61,8 @@
       "contact_email": "contact@netvest.com",
       "ios_beta_app": "https://rink.hockeyapp.net/apps/dcb637f7a19541a4a00ec7dfbbfc7cca/app_versions/232",
       "android_beta_app": "https://rink.hockeyapp.net/apps/95edc0834f3e484baad85ddd3148d777/app_versions/193",
-      "itunes_link": "http://www.apple.com/lae/itunes/",
-      "play_market_link": "https://play.google.com/store/apps",
+      "itunes_link": "https://itunes.apple.com/us/app/netvest/id1183348831?mt=8",
+      "play_market_link": "https://play.google.com/store/apps/details?id=com.netvest.netvestapp&hl=en",
       "investor_panel_link": "api.netvest.com/admin/",
       "terms_of_use_link": "netvest.com",
       "privacy_policy_link": "netvest.com"
